# phazeai-ide

./: .gitignore  .mcp.json  BETA_AUDIT_TODO.md  CHANGELOG.md  CLAUDE.md  CNAME  CODEBASE_INDEX.md  CONTRIBUTING.md  CORE_UI_ARCHITECTURE_MAP.md  Cargo.toml  HARDWARE.md  LICENSE  Makefile  PROJECT_DEEP_DIVE.md  PROJECT_SUMMARY_REPORT.md  README.md  REPO_KNOWLEDGE_PACK.md  TODO-CLOUD-PHASE3.md  TODO-IDE-PHASE3.md  TODO.md  WHAT_TO_DO.md  index.html  install.sh  rust_out  what has been done so far 824pm sat feb 21.txt
.github/workflows/: ci.yml  feature-tests.yml  release.yml
.plandex-v2/: projects-v2.json
assets/: PhazeAI.desktop
crates/ollama-rs/: .cargo_vcs_info.json  Cargo.toml
crates/ollama-rs/src/generation/chat/: mod.rs  request.rs
crates/ollama-rs/tests/: chat_history_management.rs  code_completion.rs  copy_model.rs  create_model.rs  delete_model.rs  embeddings_generation.rs  function_call.rs  generation.rs  list_local_models.rs  pull_model.rs  push_model.rs  send_chat_messages.rs  show_model_info.rs
crates/phazeai-cli/: Cargo.toml  README.md
crates/phazeai-cli/src/: app.rs  commands.rs  companion.rs  lib.rs  main.rs  theme.rs
crates/phazeai-cli/tests/: command_tests.rs
crates/phazeai-cloud/: Cargo.toml  README.md
crates/phazeai-cloud/src/: auth.rs  client.rs  lib.rs  subscription.rs
crates/phazeai-core/: Cargo.toml  README.md
crates/phazeai-core/examples/: stress_test.rs
crates/phazeai-core/resources/: Modelfile-Phaze-Lite
crates/phazeai-core/src/: companion.rs  constants.rs  error.rs  lib.rs  mcp.rs  telemetry.rs
crates/phazeai-core/src/agent/: agent.rs  core.rs  mod.rs  multi_agent.rs
crates/phazeai-core/src/analysis/: linter.rs  mod.rs  outline.rs
crates/phazeai-core/src/config/: mod.rs
crates/phazeai-core/src/context/: builder.rs  history.rs  mod.rs  persistence.rs  repo_map.rs  system_prompt.rs
crates/phazeai-core/src/ext_host/: asset_loader.rs  js.rs  mod.rs  registry.rs  theme_convert.rs  vscode_assets.rs  vsix.rs  wasm.rs
crates/phazeai-core/src/git/: mod.rs  ops.rs
crates/phazeai-core/src/llm/: claude.rs  discovery.rs  mod.rs  model_router.rs  ollama.rs  ollama_manager.rs  openai.rs  provider.rs  traits.rs
crates/phazeai-core/src/lsp/: client.rs  manager.rs  mod.rs
crates/phazeai-core/src/project/: mod.rs  watcher.rs  workspace.rs
crates/phazeai-core/src/tools/: approval.rs  bash.rs  browse.rs  copy_path.rs  create_directory.rs  delete_path.rs  diagnostics.rs  download.rs  edit.rs  fetch.rs  file.rs  find_path.rs  glob.rs  grep.rs  list.rs  mcp_bridge.rs  memory.rs  mod.rs  move_path.rs  now.rs  open.rs  screenshot.rs  traits.rs  web_search.rs
crates/phazeai-core/tests/: agent_tests.rs  core_tests.rs  editor_tests.rs  ext_host_tests.rs  git_tests.rs  sprint3_verification.rs  stress_test.rs  tool_tests.rs
crates/phazeai-ide/: Cargo.toml
crates/phazeai-ide/src/: app.rs  ext_host.rs  keybindings.rs  lib.rs  main.rs  state.rs  themes.rs
crates/phazeai-ide/src/panels/: browser.rs  chat.rs  diff.rs  editor.rs  explorer.rs  mod.rs  modelfile_editor.rs  outline.rs  problems.rs  search.rs  settings.rs  terminal.rs
crates/phazeai-ide/tests/: envoy_suite.rs
crates/phazeai-plugin-api/: Cargo.toml
crates/phazeai-plugin-api/src/: lib.rs
crates/phazeai-sidecar/: Cargo.toml  README.md
crates/phazeai-sidecar/src/: client.rs  lib.rs  manager.rs  protocol.rs  tool.rs
crates/phazeai-sidecar/tests/: sidecar_tests.rs
crates/phazeai-ui/: Cargo.toml  README.md
crates/phazeai-ui/src/: app.rs  commands.rs  lib.rs  lsp_bridge.rs  theme.rs  util.rs
crates/phazeai-ui/src/components/: button.rs  icon.rs  input.rs  mod.rs  panel.rs  scroll.rs  tabs.rs
crates/phazeai-ui/src/panels/: ai_panel.rs  chat.rs  composer.rs  editor.rs  explorer.rs  extensions.rs  git.rs  github_actions.rs  mod.rs  search.rs  settings.rs  terminal.rs
crates/phazeai-ui/tests/: lsp_tests.rs  terminal_tests.rs  tier1_state.rs  tier2_integration.rs
ext-host/: package.json  test-extension.vsix
ext-host/dummy-extension/: extension.js  index.js  package.json
ext-host/src/: extension-loader.js  main.js  rpc.js  vscode-shim.js
ext-host/wasm-extension/: Cargo.toml
ext-host/wasm-extension/src/: lib.rs
modelfiles/: Modelfile.coder  Modelfile.planner  Modelfile.reviewer  install.sh
packaging/flatpak/: com.phazeai.IDE.desktop  com.phazeai.IDE.json  com.phazeai.IDE.metainfo.xml
packaging/macos/: build-dmg.sh  entitlements.plist
packaging/windows/: build-msi.ps1  phazeai-ide.wxs
python/: analyzer.py  embeddings.py  sidecar_server.py
python/training/: advanced_collect.py  advanced_fine_tune.py  advanced_web_search.py  brand_ai.py  collect_training_data.py  dpo_align.py  export_gguf_manual.py  export_to_gguf.py  fine_tune.py  fine_tune_lora.py  fix_torchao_compat.py  generate_synthetic_data.py  media_gen.py  merge_adapters.py  model_utils.py  patch_torchao.py  rag_server.py  recover_gguf.py  research_and_learn.py  sota_fine_tune.py  strip_quant_config.py  test_all.py  train_gamedev.py  train_hacker.py  train_pipeline.py  training_config_optimizer.py  unlock_capabilities.py  web_search.py
script/: launch_phaze.sh
scripts/: build-appimage.sh  build-deb.sh  update.sh
sidecar/: README.md  server.py  test_server.py
supabase/: setup.sql
training/: README.md  export_gguf.py  fine_tune.py  prepare_data.py  prepare_tool_data.py
training/datasets/: tool_calling_train.jsonl
