[workspace]
resolver = "2"
members = [
    "crates/phazeai-core",
    "crates/phazeai-sidecar",
    "crates/phazeai-cli",
    "crates/phazeai-ide",
    "crates/ollama-rs",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["PhazeAI Technologies <dev@phazeai.com>"]
license = "MIT"
repository = "https://github.com/phazeai/ide"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1.10"
ignore = "0.4"
globset = "0.4"
similar = "2.4"
notify = "6.0"
futures = "0.3"
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# CLI
ratatui = "0.28"
crossterm = "0.28"
clap = { version = "4.5", features = ["derive"] }
syntect = "5.2"

# IDE
egui = "0.28"
eframe = "0.28"
ropey = "1.6"
rfd = "0.15"

# New Arsenal Integrations
ollama-rs = { package = "ollama-rs-phazeai", path = "crates/ollama-rs", features = ["stream", "chat-history"] }
comrak = { version = "0.36", default-features = false }
tui-textarea = { version = "0.7", features = ["ratatui"] }
tui-tree-widget = "0.22"
tree-sitter = "0.24"
tree-sitter-rust = "0.24"
tree-sitter-highlight = "0.24"
lsp-types = "0.97"
portable-pty = "0.8"
arboard = "3.4"
vte = "0.13"
