[package]
name = "phazeai-sidecar"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Python sidecar process manager and JSON-RPC client for PhazeAI"

[dependencies]
phazeai-core = { path = "../phazeai-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
lsp-types = { workspace = true }
tree-sitter = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
tokio = { workspace = true, features = ["test-util", "macros"] }
