[package]
name = "phazeai-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "PhazeAI GPU-accelerated UI framework built on Floem"

[lib]
path = "src/lib.rs"

[[bin]]
name = "phazeai-ui"
path = "src/bin/phazeai-ui.rs"

[dependencies]
floem = { workspace = true }
floem-editor-core = { workspace = true }
phazeai-core = { path = "../phazeai-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
portable-pty = { workspace = true }
vte = { workspace = true }
arboard = { workspace = true }
rfd = { workspace = true }
walkdir = "2.4"
syntect = { workspace = true }
lazy_static = "1.5"
lsp-types = { workspace = true }

[dev-dependencies]
image = "0.25"
tempfile = "3.10"
serde = { workspace = true }
toml = { workspace = true }
